RESOLVED FIXED279029
CSS -webkit-cross-fade function should not eagerly evaluate calc()
https://bugs.webkit.org/show_bug.cgi?id=279029
Summary CSS -webkit-cross-fade function should not eagerly evaluate calc()
Sam Weinig
Reported 2024-09-02 11:17:56 PDT
CSS -webkit-cross-fade function should not eagerly evaluate calc().
Attachments
Sam Weinig
Comment 1 2024-09-02 11:24:20 PDT
EWS
Comment 2 2024-09-02 13:22:57 PDT
Committed 283068@main (800fec67b75a): <https://commits.webkit.org/283068@main> Reviewed commits have been landed. Closing PR #33038 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-02 13:23:12 PDT
Note You need to log in before you can comment on or make changes to this bug.