CSS -webkit-cross-fade function should not eagerly evaluate calc() https://bugs.webkit.org/show_bug.cgi?id=279029

Reviewed by Darin Adler.

Delays evaluation of calc() values in cross fade images to style
building. Removes last use of the parse time raw MetaTransformer,
which can now be retired.

* LayoutTests/fast/css/getComputedStyle/computed-style-cross-fade-expected.txt:
* LayoutTests/fast/css/getComputedStyle/computed-style-cross-fade.html:
* LayoutTests/fast/images/valid-style-cross-fade-expected.txt: Added.
* LayoutTests/fast/images/valid-style-cross-fade.html: Added.
    - Add / update tests with calc() cases.
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/css/CSSCrossfadeValue.cpp:
(WebCore::CSSCrossfadeValue::createStyleImage const):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+Image.cpp:
(WebCore::CSSPropertyParserHelpers::consumeCrossFade):
* Source/WebCore/css/parser/CSSPropertyParserConsumer+MetaTransformer.h: Removed.

Canonical link: https://commits.webkit.org/283068@main