Source/WebCore/css/parser/CSSPropertyParserConsumer+Image.cpp
@@ -48,7 +48,6 @@
 #include "CSSPropertyParserConsumer+Length.h"
 #include "CSSPropertyParserConsumer+LengthDefinitions.h"
 #include "CSSPropertyParserConsumer+MetaConsumer.h"
-#include "CSSPropertyParserConsumer+MetaTransformer.h"
 #include "CSSPropertyParserConsumer+Number.h"
 #include "CSSPropertyParserConsumer+NumberDefinitions.h"
 #include "CSSPropertyParserConsumer+Percent.h"
@@ -895,12 +894,15 @@ static RefPtr<CSSValue> consumeCrossFade(CSSParserTokenRange& args, const CSSPar
     if (!toImageValueOrNone || !consumeCommaIncludingWhitespace(args))
         return nullptr;
 
-    auto value = consumePercentOrNumberRaw(args);
+    auto value = consumePercentDividedBy100OrNumber(args);
     if (!value)
         return nullptr;
-    auto percentage = transformRaw<PercentOrNumberDividedBy100Transformer>(*value);
-    auto percentageValue = CSSPrimitiveValue::create(clampTo<double>(percentage, 0, 1));
-    return CSSCrossfadeValue::create(fromImageValueOrNone.releaseNonNull(), toImageValueOrNone.releaseNonNull(), WTFMove(percentageValue), functionId == CSSValueWebkitCrossFade);
+
+    if (value->isNumber()) {
+        if (auto numberValue = value->resolveAsNumberIfNotCalculated(); numberValue && (*numberValue < 0 || *numberValue > 1))
+            value = CSSPrimitiveValue::create(clampTo<double>(*numberValue, 0, 1));
+    }
+    return CSSCrossfadeValue::create(fromImageValueOrNone.releaseNonNull(), toImageValueOrNone.releaseNonNull(), value.releaseNonNull(), functionId == CSSValueWebkitCrossFade);
 }
 
 // MARK: <-webkit-canvas()>
